# UTMB

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
data/: UTMB 2025.gpx  utmb_2003.csv  utmb_2004.csv  utmb_2005.csv  utmb_2006.csv  utmb_2007.csv  utmb_2008.csv  utmb_2009.csv  utmb_2010.csv  utmb_2011.csv  utmb_2012.csv  utmb_2013.csv  utmb_2014.csv  utmb_2015.csv  utmb_2016.csv
public/data/races/: race_2004.json  race_2005.json  race_2006.json  race_2007.json  race_2008.json  race_2009.json  race_2010.json  race_2016.json  race_2017.json
scripts/: load_race_detail.py  process_data.py
src/: App.tsx  index.css  vite-env.d.ts
src/components/: RangeSlider.css
src/data/: processedData.ts
src/data/races/: race_2003.json  race_2007.json  race_2008.json  race_2011.json  race_2012.json  race_2013.json  race_2014.json  race_2015.json  race_2016.json  race_2017.json
src/pages/: AnnexesPage.tsx  CheckpointAnalysisPage.tsx  CourseMapPage.tsx  HomePage.tsx  RaceDetailPage.tsx
src/types/: gpx-parser-builder.d.ts
src/utils/: gpxParser.ts
