[project]
name = "utmb-viz"
version = "2.0.0"
description = "UTMB Data Processing & Visualization"
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
